# WoS-NO

./: README.md  requirements.txt
bindings/zombie/demo/: demo.cpp  grid.h  scene.h  scene_3d.h  scene_3d_varying.h
bindings/zombie/demo/scenes/: image2pfm.py  svg2obj.py
bindings/zombie/include/zombie/boundary_value_caching/: boundary_sampler.h  domain_sampler.h  splatter.h
bindings/zombie/include/zombie/core/: distributions.h  pde.h
bindings/zombie/include/zombie/point_estimation/: walk_on_stars.h
bindings/zombie/include/zombie/utils/: fcpw_scene_loader.h
bindings/zombie_3d_delta/: delta_tracking.py
bindings/zombie_3d_delta/demo/: demo.cpp  demo.py  model_problem.h  model_problem_3d.h
bindings/zombie_3d_delta/include/zombie/: zombie.h
bindings/zombie_3d_delta/include/zombie/core/: distributions.h  pde.h
bindings/zombie_3d_delta/include/zombie/point_estimation/: common.h  delta_tracking.h  walk_on_stars.h
bindings/zombie_3d_delta/include/zombie/utils/: fcpw_geometric_queries.h
bindings/zombie_3d_delta/include/zombie/variance_reduction/: boundary_samplers.h  boundary_value_caching_dt.h
bindings/zombie_3d_surface/: CMakeLists.txt  surface_recon.py
bindings/zombie_3d_surface/demo/: demo.cpp  image.h  model_problem.h  model_problem_3d.h
bindings/zombie_3d_surface/python/: CMakeLists.txt
bindings/zombie_Laplace/: image_laplace.py
bindings/zombie_Laplace/demo/: CMakeLists.txt  demo.cpp  model_problem.h  model_problem_3d.h
bindings/zombie_Laplace/include/zombie/point_estimation/: walk_on_stars.h
configs/: base.yaml  setup.yaml
configs/dataset/: linear_poisson2d.yaml  linear_poisson2dBVC.yaml  linear_poisson3d.yaml
configs/logger/: log.yaml
configs/loss/: deepritz.yaml  nonlinear_deepritz.yaml  pino.yaml  pino_3d.yaml  pino_wos.yaml  wos.yaml  wos3d.yaml
configs/model/: gino.yaml  gino3d.yaml  gino_exp.yaml  pino3d.yaml
configs/optimizer/: adam.yaml
configs/scheduler/: cosannealinglr.yaml  reducelr.yaml  steplr.yaml
configs/solver/: wos2d.yaml  wos3d.yaml
configs/train/: deepritz.yaml  pino_3d.yaml  pino_wos.yaml  wos.yaml  wos3d.yaml
data/: readme.md
dataset_generation/: generate_poisson2d.py  generate_poisson3d.py
lib/openvdb/ci/: download_houdini.py  download_vdb_caches.py
lib/openvdb/openvdb/openvdb/python/test/: TestOpenVDB.py
lib/openvdb/openvdb_houdini/openvdb_houdini/: pythonrc.py
scripts/: main.py
src/: __init__.py  losses.py  wos_trainer.py
src/datasets/: 3d_wire_mesh.py  __init__.py  linear_poisson_2d.py  linear_poisson_2d_bvc.py  linear_poisson_3d.py
src/mpu/: comm.py
src/pde/: __init__.py  pde_base.py  poisson_2d.py  poisson_3d.py
src/solvers/: __init__.py
src/solvers/fenics/: __init__.py  fenics_poisson_2d.py  fenics_solver.py
src/solvers/wos/: __init__.py  wos_poisson_2d.py  wos_poisson_2d_bvc.py  wos_poisson_3d.py  wos_solver.py
sweeps/: run_training.sh
tests/: test_fenics_2d.py
utils/: hydra.py
